# market-micro-research

./: .gitignore  README.md
0-basic/: basic-features.md  tardis-crypto-currency-trading-data.md
0-basic/restruct-orderbook/: Cargo.toml
0-basic/restruct-orderbook/src/: main.rs
1-computational-research/file-type-benchmark/: .gitignore  Cargo.toml  file-type-benchmark.md
1-computational-research/file-type-benchmark/benches/: file_read_benchmark.rs
1-computational-research/file-type-benchmark/src/: main.rs
1-computational-research/websocket-study/: Cargo.toml
1-computational-research/websocket-study/src/: main.rs
2-hftbacktest/: .gitignore  1_print_bbo.ipynb  4_submitting_order.ipynb  5_clearing_order.ipynb  6_limit_order_market_making.py  backtest.md  data.md  data_preparation.ipynb  getting_started.ipynb  obi.py
2-hftbacktest/boiler_plate/: boilerplate.ipynb  boilerplate.py
2-hftbacktest/docs/: backtest.md  order.md  order_book_imbalance.md
2-statistical-research/1-orls/: orls.md
data-info/: how-to-read-order-book.md  tardis-crypto-currency-trading-data.md
statistical-research/: basic-features.md
