[package]
name = "file-type-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
flate2 = "1.1.2"
polars = { version = "0.50.0", features = ["serde"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13"
lz4_flex = "0.11"
snap = "1.1.1"
apache-avro = "0.16"
csv = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "file_read_benchmark"
harness = false

[[bin]]
name = "convert_all_formats"
path = "bin/convert_all_formats.rs"
